--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tmp",
+  "name": "delivery",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -11,19 +11,18 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/tmp/main",
+    "start:prod": "node dist/apps/delivery/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/tmp/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/delivery/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "opencommit": "^3.2.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
