feat(docker-compose): mysql 서비스 이름을 mysql_user로 변경 및 의존성 추가 변경된 서비스 이름에 따라 의존성을 추가하여 안정성을 높임

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,17 @@ services:
       dockerfile: ./apps/user/Dockerfile
       target: development
     command: npm run start:dev user
+    depends_on:
+      mysql_user:
+        condition: service_healthy
     ports:
       - '3001:3000'
     volumes:
       - .:/user/src/app
       - /usr/src/app/node_modules
 
-  mysql:
-    image: mysql:9
-    restart: always
+  mysql_user:
+    image: mysql:9.0
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       TZ: Asia/Seoul
