fix(docker-compose): MySQL 헬스체크 설정을 개선 헬스체크의 interval과 timeout을 조정하여 더 빠른 응답을 보장한다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,7 @@ services:
       - ./mysql/:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
+      interval: 5s
+      timeout: 5s
       retries: 10
+      start_period: 5s
