fix(docker-compose): 잘못된 경로를 수정하여 /user/src/app에서 /usr/src/app으로 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - '3001:3000'
     volumes:
-      - .:/user/src/app
+      - .:/usr/src/app
       - /usr/src/app/node_modules
 
   mysql_user:
