feat(docker-compose): 사용자 서비스에 env_file 추가 및 MySQL 컨테이너 이름 설정 사용자 서비스에 환경 변수를 관리하기 위한 env_file을 추가하고, MySQL 컨테이너의 이름을 명시적으로 설정하여 관리 용이성을 높인다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     depends_on:
       mysql_user:
         condition: service_healthy
+    env_file:
+      - ./apps/user/.env
     ports:
       - '3001:3000'
     volumes:
@@ -18,6 +20,7 @@ services:
 
   mysql_user:
     image: mysql:9.0
+    container_name: 'mysql_db'
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       TZ: Asia/Seoul
