--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/delivery/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/delivery/test/jest-e2e.json",
+    "test:user:watch": "jest --watch --testPathPattern=apps/user/src/user --coverage --collectCoverageFrom=apps/user/src/user/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
