feat(auth): 사용자 인증 및 등록 기능 개선 test(auth): 사용자 인증 및 등록에 대한 단위 테스트 추가 chore(package): 인증 관련 테스트 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/delivery/test/jest-e2e.json",
-    "test:user:watch": "jest --watch --testPathPattern=apps/user/src/user --coverage --collectCoverageFrom=apps/user/src/user/**"
+    "test:user:watch": "jest --watch --testPathPattern=apps/user/src/user --coverage --collectCoverageFrom=apps/user/src/user/**",
+    "test:auth:watch": "jest --watch --testPathPattern=apps/user/src/auth --coverage --collectCoverageFrom=apps/user/src/auth/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
