--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,3 +76,39 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
+
+  order:
+    container_name: 'order_api'
+    build:
+      context: .
+      dockerfile: ./apps/order/Dockerfile
+      target: development
+    command: npm run start:dev order
+    depends_on:
+      mongo_order:
+        condition: service_healthy
+    env_file:
+      - ./apps/order/.env
+    ports:
+      - '3003:3000'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
+  mongo_order:
+    image: mongo:8
+    container_name: 'mongo_order_db'
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: 1234
+    ports:
+      - '6003:27017'
+    volumes:
+      - ./mongo/order:/data/lib
+    command: mongod --quiet --logpath /dev/null
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
