feat(docker-compose): 결제 서비스 및 MySQL 데이터베이스 추가 결제 API와 MySQL 데이터베이스를 위한 Docker 서비스를 설정하여 개발 환경에서의 통합을 지원한다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,3 +112,41 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
+
+  payment:
+    container_name: 'payment_api'
+    build:
+      context: .
+      dockerfile: ./apps/payment/Dockerfile
+      target: development
+    command: npm run start:dev payment
+    depends_on:
+      mysql_payment:
+        condition: service_healthy
+    env_file:
+      - ./apps/payment/.env
+    ports:
+      - '3004:3000'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
+  mysql_payment:
+    image: mysql:9.0
+    container_name: 'mysql_payment_db'
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234
+      TZ: Asia/Seoul
+    ports:
+      - '6004:3306'
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+    volumes:
+      - ./mysql/payment:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
